--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/TabbedPages/PharmacyPage.xaml
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/TabbedPages/PharmacyPage.xaml
@@ -40,23 +40,8 @@
                     <StackPanel CornerRadius="5"
 								Margin="5"
 								BorderThickness="1"
-                                Padding="10">
-                        <StackPanel.BorderBrush>
-                            <media:AcrylicBrush TintOpacity="0.1"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                                                xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.BorderBrush>
-                        <StackPanel.Background>
-                            <media:AcrylicBrush TintOpacity="0.7"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                             xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.Background>
+                                Padding="10" 
+                                BorderBrush="{StaticResource Backdrop}">                        
                         <TextBlock Text="ACCOUNT DETAILS"
                                Padding="20,10"
                                FontWeight="Bold"
@@ -111,23 +96,8 @@
                     <StackPanel CornerRadius="5"
 								Margin="5"
 								BorderThickness="1"
-                                Padding="5">
-                        <StackPanel.BorderBrush>
-                            <media:AcrylicBrush TintOpacity="0.1"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                                                xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.BorderBrush>
-                        <StackPanel.Background>
-                            <media:AcrylicBrush TintOpacity="0.7"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                             xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.Background>
+                                Padding="5"
+                                BorderBrush="{StaticResource Backdrop}">                        
                         <TextBlock Text="DEPLOY CONTRACT"
                                    Padding="20,10"
                                    Style="{ThemeResource MaterialHeadline4}" 
@@ -187,24 +157,8 @@
                     <StackPanel CornerRadius="5"
 								Margin="5"
 								BorderThickness="1"
-                                Padding="5">
-                        <StackPanel.BorderBrush>
-                            <media:AcrylicBrush TintOpacity="0.1"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                                                xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.BorderBrush>
-                        <StackPanel.Background>
-                            <media:AcrylicBrush TintOpacity="0.7"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                             xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.Background>
-
+                                Padding="5"
+                                BorderBrush="{StaticResource Backdrop}">
                         <TextBlock Text="DISPATCH DRUG SHIPMENT"
                                    Padding="20,10"
                                    FontWeight="Bold"
@@ -315,23 +269,8 @@
                     <StackPanel CornerRadius="5"
                                 Margin="5"
                                 BorderThickness="1" MinHeight="{Binding ActualHeight, ElementName=listViewItem, Mode=OneWay}" 
-                                MinWidth="{Binding ActualWidth, ElementName=listViewItem, Mode=OneWay}">
-                        <StackPanel.BorderBrush>
-                            <media:AcrylicBrush TintOpacity="0.1"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                                                xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.BorderBrush>
-                        <StackPanel.Background>
-                            <media:AcrylicBrush TintOpacity="0.7"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                             xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.Background>
+                                MinWidth="{Binding ActualWidth, ElementName=listViewItem, Mode=OneWay}"
+                                BorderBrush="{StaticResource Backdrop}">                        
                         <TextBlock Text="OWNERSHIP MAPPING"
                                     Margin="2,5"
                                     Padding="20,10"
