--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/TabbedPages/ManufacturerPage.xaml
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/TabbedPages/ManufacturerPage.xaml
@@ -39,23 +39,9 @@
                     <StackPanel CornerRadius="5"
 								Margin="5"
 								BorderThickness="1"
-                                Padding="10">
-                        <StackPanel.BorderBrush>
-                            <media:AcrylicBrush TintOpacity="0.1"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                                                xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.BorderBrush>
-                        <StackPanel.Background>
-                            <media:AcrylicBrush TintOpacity="0.7"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                             xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.Background>
+                                Padding="10"
+                                BorderBrush="{StaticResource Backdrop}">                        
+                        
                         <TextBlock Text="ACCOUNT DETAILS"
                                Padding="20,10"
                                FontWeight="Bold"
@@ -109,23 +95,8 @@
                     <StackPanel CornerRadius="5"
 								Margin="5"
 								BorderThickness="1"
-                                Padding="5">
-                        <StackPanel.BorderBrush>
-                            <media:AcrylicBrush TintOpacity="0.1"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                                                xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.BorderBrush>
-                        <StackPanel.Background>
-                            <media:AcrylicBrush TintOpacity="0.7"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                             xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.Background>
+                                Padding="5"
+                                BorderBrush="{StaticResource Backdrop}">                        
                         <TextBlock Text="DEPLOY CONTRACT"
                                    Padding="20,10"
                                    Style="{ThemeResource MaterialHeadline4}" 
@@ -185,23 +156,8 @@
                     <StackPanel CornerRadius="5"
 								Margin="5"
 								BorderThickness="1"
-                                Padding="5">
-                        <StackPanel.BorderBrush>
-                            <media:AcrylicBrush TintOpacity="0.1"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                                                xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.BorderBrush>
-                        <StackPanel.Background>
-                            <media:AcrylicBrush TintOpacity="0.7"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                             xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.Background>
+                                Padding="5"
+                                BorderBrush="{StaticResource Backdrop}">                        
 
                         <TextBlock Text="DISPATCH DRUG SHIPMENT"
                                    Padding="20,10"
@@ -313,23 +269,9 @@
                     <StackPanel CornerRadius="5"
                                 Margin="5"
                                 BorderThickness="1" MinHeight="{Binding ActualHeight, ElementName=listViewItem, Mode=OneWay}" 
-                                MinWidth="{Binding ActualWidth, ElementName=listViewItem, Mode=OneWay}">
-                        <StackPanel.BorderBrush>
-                            <media:AcrylicBrush TintOpacity="0.1"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                                                xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.BorderBrush>
-                        <StackPanel.Background>
-                            <media:AcrylicBrush TintOpacity="0.7"
-                                                TintLuminosityOpacity="0.9"
-                                                TintColor="{ThemeResource SystemAccentColor}"
-                                                FallbackColor="{ThemeResource SystemAccentColor}"
-                                                BackgroundSource="Backdrop"
-                             xmlns:media="using:Windows.UI.Xaml.Media" />
-                        </StackPanel.Background>
+                                MinWidth="{Binding ActualWidth, ElementName=listViewItem, Mode=OneWay}"
+                                BorderBrush="{StaticResource Backdrop}">
+                        
                         <TextBlock Text="OWNERSHIP MAPPING"
                                     Margin="2,5"
                                     Padding="20,10"
@@ -349,10 +291,6 @@
                     </StackPanel>
                 </ListViewItem>
             </ListView>
-
-
-
-
         </Grid>
     </Border>
 </Page>
