chore: Removing reference to material styles/colors

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/App.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/App.xaml
@@ -12,6 +12,13 @@
 				<ResourceDictionary Source="Styles/Icons.xaml" />
 				<ResourceDictionary Source="Styles/Colors.xaml" />
 
+
+				<!--<MaterialColors xmlns="using:Uno.Material"
+								OverrideSource="ms-appx:///Styles/ColorPaletteOverride.xaml" />
+				<MaterialFonts xmlns="using:Uno.Material"
+							   OverrideSource="ms-appx:///Styles/MaterialFontsOverride.xaml" />
+				<MaterialResources xmlns="using:Uno.Material" />-->
+
 				<ResourceDictionary Source="Styles/Controls/ToggleButton.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
