--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Styles/Controls/ToggleButton.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Styles/Controls/ToggleButton.xaml
@@ -56,7 +56,7 @@
 						<Border x:Name="LightBackground"
 								HorizontalAlignment="Stretch"
 								VerticalAlignment="Stretch"
-								Background="{StaticResource MaterialPrimaryVariantLightColor}" />
+								Background="WhiteSmoke" />
 
 						<Border x:Name="DarkBackground"
 								HorizontalAlignment="Stretch"
