fix: add missing files

--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Shared/Pages/Clients.xaml
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Shared/Pages/Clients.xaml
@@ -34,12 +34,11 @@
                     </Grid.RowDefinitions>
 
                     <Border Grid.RowSpan="4">
-						<!-- TODO: Look at latest Windows App SDK samples for using Acrylic background -->
-                        <!--<Border.Background>
-                            <AcrylicBrush BackgroundSource="Backdrop"
+                        <Border.Background>
+                            <AcrylicBrush 
                               TintColor="{ThemeResource SecondaryGradient}"
                               TintOpacity="0.1"/>
-                        </Border.Background>-->
+                        </Border.Background>
                     </Border>
 
                     <Grid Grid.Row="0">
