chore: fix databindign

--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/AuthorPage.xaml
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/AuthorPage.xaml
@@ -11,6 +11,10 @@
 	mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Resources>
+       
+    </Page.Resources>
+
     <Grid>
         <utu:AutoLayout Background="{ThemeResource OnPrimaryBrush}">
     <utu:AutoLayout.Resources>
@@ -63,7 +67,7 @@
                 <utu:AutoLayout utu:AutoLayout.CounterAlignment="Start">
                   <TextBlock Foreground="{ThemeResource OnBackgroundBrush}" Text="Interaction of Color" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource TitleMedium}" />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="by Josef Albers, Nicholas Fox Weber" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
-                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource RatingControlStyle}" />
+                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start"  />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
@@ -81,7 +85,7 @@
                 <utu:AutoLayout utu:AutoLayout.CounterAlignment="Start">
                   <TextBlock Foreground="{ThemeResource OnBackgroundBrush}" Text="Interaction of Color" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource TitleMedium}" />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="by Josef Albers, Nicholas Fox Weber" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
-                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource RatingControlStyle}" />
+                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start"  />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
@@ -99,7 +103,7 @@
                 <utu:AutoLayout utu:AutoLayout.CounterAlignment="Start">
                   <TextBlock Foreground="{ThemeResource OnBackgroundBrush}" Text="Interaction of Color" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource TitleMedium}" />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="by Josef Albers, Nicholas Fox Weber" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
-                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource RatingControlStyle}" />
+                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start"  />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
@@ -117,7 +121,7 @@
                 <utu:AutoLayout utu:AutoLayout.CounterAlignment="Start">
                   <TextBlock Foreground="{ThemeResource OnBackgroundBrush}" Text="Interaction of Color" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource TitleMedium}" />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="by Josef Albers, Nicholas Fox Weber" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
-                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource RatingControlStyle}" />
+                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start"  />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
@@ -135,7 +139,7 @@
                 <utu:AutoLayout utu:AutoLayout.CounterAlignment="Start">
                   <TextBlock Foreground="{ThemeResource OnBackgroundBrush}" Text="Interaction of Color" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource TitleMedium}" />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="by Josef Albers, Nicholas Fox Weber" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
-                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource RatingControlStyle}" />
+                  <muxc:RatingControl Caption="9,5558 ratings" MaxRating="5" utu:AutoLayout.CounterAlignment="Start" />
                   <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Published 15 May 2006" utu:AutoLayout.CounterAlignment="Start" Style="{StaticResource LabelMedium}" />
                 </utu:AutoLayout>
                 <Button Foreground="{ThemeResource OnPrimaryBrush}" Background="{ThemeResource SecondaryVariantDarkBrush}" Content="Enabled" utu:AutoLayout.CounterAlignment="Start" Width="141" Height="40" CornerRadius="4" Style="{StaticResource ElevatedButtonStyle}">
