--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/BookPage.xaml
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/BookPage.xaml
@@ -63,7 +63,7 @@
                                                     MaxRating="5"
                                                     utu:AutoLayout.CounterAlignment="Center"
                                                     utu:AutoLayout.PrimaryAlignment="Stretch"
-                                                    Style="{StaticResource RatingControlStyle}"/>
+                                                    />
                                 <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}"
                                            TextAlignment="Center"
                                            TextWrapping="Wrap" 
@@ -81,7 +81,7 @@
                                     </Button>
                                     <utu:AutoLayout utu:AutoLayout.CounterAlignment="Center">
                                         <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" TextAlignment="Center" Text="Rate this book:" utu:AutoLayout.CounterAlignment="Center" Style="{StaticResource TitleSmall}" />
-                                        <muxc:RatingControl MaxRating="5" utu:AutoLayout.CounterAlignment="Center" Style="{StaticResource RatingControlStyle}" />
+                                        <muxc:RatingControl MaxRating="5" utu:AutoLayout.CounterAlignment="Center" />
                                     </utu:AutoLayout>
                                 </utu:AutoLayout>
                             </utu:AutoLayout>
