--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/HomePage.xaml
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/HomePage.xaml
@@ -79,7 +79,7 @@
                                                         <TextBlock Foreground="{ThemeResource OnSurfaceVariantBrush}" Text="Rate this Book" Width="80" Style="{StaticResource CaptionSmall}" />
                                                         <muxc:RatingControl MaxRating="5"
 																			Value="{Binding AverageRating}"
-																			utu:AutoLayout.CounterAlignment="End" Style="{StaticResource RatingControlStyle}" />
+																			utu:AutoLayout.CounterAlignment="End" />
                                                     </utu:AutoLayout>
                                                 </utu:AutoLayout>
                                             </utu:AutoLayout>
