--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/App.xaml
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/App.xaml
@@ -2,13 +2,27 @@
     x:Class="UnoGoodReads.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:local="using:UnoGoodReads">
 	
     <Application.Resources>
-        <ResourceDictionary>
+        
+        <ResourceDictionary>          
             <ResourceDictionary.MergedDictionaries>
+               
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Add resource dictionaries here -->                
+
+                <!-- Load Uno.Material resources -->
+                <MaterialColors xmlns="using:Uno.Material" />
+                <MaterialFonts xmlns="using:Uno.Material" />
+                <MaterialResources xmlns="using:Uno.Material" />
+
+                <!-- Load Uno.Toolkit.UI resources -->
+                <ToolkitResources xmlns="using:Uno.Toolkit.UI" />
+                <MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />
+
+                <!-- Add resource dictionaries here -->
+                <ResourceDictionary Source="ms-appx:///Styles/MainDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <!-- Add resources here -->
         </ResourceDictionary>
