--- a/UI/NativeFrameNav/NativeFrameNav.Shared/MainPage.xaml
+++ b/UI/NativeFrameNav/NativeFrameNav.Shared/MainPage.xaml
@@ -1,14 +1,23 @@
-﻿<Page
-    x:Class="NativeFrameNav.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:NativeFrameNav"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"    
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+﻿<Page x:Class="NativeFrameNav.MainPage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:local="using:NativeFrameNav"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:toolkit="using:Uno.UI.Toolkit"
+	  mc:Ignorable="d"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-      <TextBlock Text="Hello, world!" Margin="20" FontSize="30" />
+    <Grid toolkit:VisibleBoundsPadding.PaddingMask="Top">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <CommandBar Grid.Row="0" Content="MainPage" />
+        <StackPanel Grid.Row="1">
+            <TextBlock Text="Main Content" />
+            <Button Content="Next Page" Click="GotoNextPage" />
+        </StackPanel>
     </Grid>
 </Page>
