feat: changes colors

--- a/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Shared/App.xaml
+++ b/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Shared/App.xaml
@@ -11,7 +11,8 @@
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
 
                 <!-- Load Uno.Material resources -->
-                <MaterialColors xmlns="using:Uno.Material" />
+                <MaterialColors xmlns="using:Uno.Material"
+                                OverrideSource="ms-appx:///Style/Application/MaterialColorsOverride.xaml" />
                 <MaterialFonts xmlns="using:Uno.Material" />
                 <MaterialResources xmlns="using:Uno.Material" />
 
