--- a/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Shared/MainPage.xaml
+++ b/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Shared/MainPage.xaml
@@ -18,127 +18,129 @@
         <x:String x:Key="Icon_Favorite_Border">F1 M 14.5 0 C 12.759999990463257 0 11.090000033378601 0.8100001811981201 10 2.0900001525878906 C 8.909999966621399 0.8100001811981201 7.240000009536743 0 5.5 0 C 2.4200000762939453 0 0 2.4200000762939453 0 5.5 C 0 9.27999997138977 3.4000000953674316 12.36000108718872 8.550000190734863 17.040000915527344 L 10 18.350000381469727 L 11.449999809265137 17.030000686645508 C 16.59999990463257 12.360000610351562 20 9.27999997138977 20 5.5 C 20 2.4200000762939453 17.579999923706055 0 14.5 0 Z M 10.100000381469727 15.549999237060547 L 10 15.649999618530273 L 9.899999618530273 15.549999237060547 C 5.1399993896484375 11.239999294281006 2 8.390000104904175 2 5.5 C 2 3.5 3.5 2 5.5 2 C 7.039999961853027 2 8.539999723434448 2.9900001287460327 9.069999694824219 4.360000133514404 L 10.9399995803833 4.360000133514404 C 11.459999561309814 2.9900001287460327 12.960000038146973 2 14.5 2 C 16.5 2 18 3.5 18 5.5 C 18 8.390000104904175 14.860000610351562 11.239999294281006 10.100000381469727 15.549999237060547 Z</x:String>
         <x:String x:Key="Icon_Location_Pin">F1 M 7 0 C 3.130000114440918 0 0 3.130000114440918 0 7 C 0 8.740000009536743 0.4999998211860657 10.370000123977661 1.4099998474121094 11.84000015258789 C 2.3599998354911804 13.380000114440918 3.609999716281891 14.699999809265137 4.569999694824219 16.239999771118164 C 5.039999693632126 16.989999771118164 5.379999756813049 17.689999997615814 5.739999771118164 18.5 C 5.999999761581421 19.05000001192093 6.209999978542328 20 7 20 C 7.790000021457672 20 8 19.05000001192093 8.25 18.5 C 8.620000004768372 17.689999997615814 8.950000077486038 16.989999771118164 9.420000076293945 16.239999771118164 C 10.380000054836273 14.709999799728394 11.629999935626984 13.390000104904175 12.579999923706055 11.84000015258789 C 13.499999940395355 10.370000123977661 14 8.740000009536743 14 7 C 14 3.130000114440918 10.869999885559082 0 7 0 Z M 7 9.75 C 5.620000004768372 9.75 4.5 8.629999995231628 4.5 7.25 C 4.5 5.870000004768372 5.620000004768372 4.75 7 4.75 C 8.379999995231628 4.75 9.5 5.870000004768372 9.5 7.25 C 9.5 8.629999995231628 8.379999995231628 9.75 7 9.75 Z</x:String>
     </Page.Resources>
-    <utu:AutoLayout Background="{ThemeResource BackgroundBrush}">
-        <ScrollViewer utu:AutoLayout.PrimaryAlignment="Stretch">
-            <utu:AutoLayout Spacing="8">
-                <Image Source="https://picsum.photos/390/360"
-                       Stretch="UniformToFill"
-                       Height="360" />
-                <utu:AutoLayout Padding="8,92"
-                                Height="432">
-                    <utu:AutoLayout Spacing="16"
-                                    Padding="16"
-                                    PrimaryAxisAlignment="Center"
-                                    Orientation="Horizontal"
-                                    Height="82">
-                        <Border utu:AutoLayout.CounterAlignment="Start"
-                                Width="60"
-                                Height="60"
-                                CornerRadius="50">
-                            <Image Source="https://picsum.photos/60/60"
-                                   Stretch="UniformToFill" />
-                        </Border>
-                        <utu:AutoLayout utu:AutoLayout.CounterAlignment="Center"
-                                        utu:AutoLayout.PrimaryAlignment="Stretch">
-                            <utu:AutoLayout PrimaryAxisAlignment="Center">
-                                <TextBlock TextWrapping="Wrap"
-                                           Text="Harry Jones"
-                                           Foreground="{ThemeResource OnSurfaceBrush}"
-                                           Style="{StaticResource TitleMedium}" />
-                                <TextBlock TextWrapping="Wrap"
-                                           Text="Owner"
-                                           Foreground="{ThemeResource OnSurfaceMediumBrush}" />
+    <utu:SafeArea Insets="VisibleBounds">
+        <utu:AutoLayout Background="{ThemeResource BackgroundBrush}">
+            <ScrollViewer utu:AutoLayout.PrimaryAlignment="Stretch">
+                <utu:AutoLayout Spacing="8">
+                    <Image Source="https://picsum.photos/390/360"
+                           Stretch="UniformToFill"
+                           Height="360" />
+                    <utu:AutoLayout Padding="8,92"
+                                    Height="432">
+                        <utu:AutoLayout Spacing="16"
+                                        Padding="16"
+                                        PrimaryAxisAlignment="Center"
+                                        Orientation="Horizontal"
+                                        Height="82">
+                            <Border utu:AutoLayout.CounterAlignment="Start"
+                                    Width="60"
+                                    Height="60"
+                                    CornerRadius="50">
+                                <Image Source="https://picsum.photos/60/60"
+                                       Stretch="UniformToFill" />
+                            </Border>
+                            <utu:AutoLayout utu:AutoLayout.CounterAlignment="Center"
+                                            utu:AutoLayout.PrimaryAlignment="Stretch">
+                                <utu:AutoLayout PrimaryAxisAlignment="Center">
+                                    <TextBlock TextWrapping="Wrap"
+                                               Text="Harry Jones"
+                                               Foreground="{ThemeResource OnSurfaceBrush}"
+                                               Style="{StaticResource TitleMedium}" />
+                                    <TextBlock TextWrapping="Wrap"
+                                               Text="Owner"
+                                               Foreground="{ThemeResource OnSurfaceMediumBrush}" />
+                                </utu:AutoLayout>
                             </utu:AutoLayout>
+                            <TextBlock TextAlignment="End"
+                                       Text="24.01.2022"
+                                       utu:AutoLayout.CounterAlignment="Center"
+                                       Foreground="{ThemeResource OnSurfaceBrush}"
+                                       Style="{StaticResource BodySmall}" />
                         </utu:AutoLayout>
-                        <TextBlock TextAlignment="End"
-                                   Text="24.01.2022"
-                                   utu:AutoLayout.CounterAlignment="Center"
-                                   Foreground="{ThemeResource OnSurfaceBrush}"
-                                   Style="{StaticResource BodySmall}" />
-                    </utu:AutoLayout>
-                    <TextBlock Text="Hi! Martha had impeccable manners when I first met her, most of which I’ve since undone. She’s also become very “chatty” with a full range of Scooby Doo noises when she doesn’t feel she’s getting the attention she deserves."
-                               Margin="10"
-                               Width="374"
-                               Foreground="{ThemeResource OnSurfaceVariantBrush}"
-                               Style="{StaticResource TitleMedium}" />
-                    <utu:AutoLayout Spacing="39"
-                                    Padding="0,10"
-                                    PrimaryAxisAlignment="Center"
-                                    VerticalAlignment="Bottom"
-                                    Orientation="Horizontal">
-                        <ToggleButton utu:AutoLayout.CounterAlignment="Center"
-                                      BorderBrush="{ThemeResource OnSurfaceVariantBrush}"
-                                      BorderThickness="1"
-                                      CornerRadius="40"
-                                      Style="{StaticResource IconToggleButtonStyle}">
-                            <ToggleButton.Content>
-                                <PathIcon Data="{StaticResource Icon_Favorite_Border}" />
-                            </ToggleButton.Content>
-                            <um:ControlExtensions.AlternateContent>
-                                <PathIcon Data="{StaticResource Icon_Favorite}"
-                                          Foreground="{ThemeResource OnSurfaceMediumBrush}" />
-                            </um:ControlExtensions.AlternateContent>
-                        </ToggleButton>
-                        <Button Background="{ThemeResource TertiaryBrush}"
-                                Content="Adoption"
-                                utu:AutoLayout.CounterAlignment="Center"
-                                Width="152"
-                                Height="45"
-                                Foreground="{ThemeResource OnSurfaceBrush}"
-                                Style="{StaticResource ElevatedButtonStyle}" />
-                    </utu:AutoLayout>
-                </utu:AutoLayout>
-                <utu:AutoLayout Background="{ThemeResource SecondaryContainerBrush}"
-                                Spacing="4"
-                                Padding="40,12"
-                                CornerRadius="30"
-                                utu:AutoLayout.IsIndependentLayout="True"
-                                Margin="20,314,0,0"
-                                VerticalAlignment="Top"
-                                HorizontalAlignment="Left"
-                                Width="350"
-                                Height="136">
-                    <TextBlock Text="Martha"
-                               Margin="0,15,0,0"
-                               utu:AutoLayout.CounterAlignment="Start"
-                               Foreground="{ThemeResource OnBackgroundBrush}"
-                               Style="{StaticResource TitleLarge}" />
-                    <utu:AutoLayout Spacing="33"
-                                    Orientation="Horizontal">
-                        <TextBlock TextAlignment="Center"
-                                   Text="Border Collie"
-                                   utu:AutoLayout.CounterAlignment="Center"
+                        <TextBlock Text="Hi! Martha had impeccable manners when I first met her, most of which I’ve since undone. She’s also become very “chatty” with a full range of Scooby Doo noises when she doesn’t feel she’s getting the attention she deserves."
+                                   Margin="10"
+                                   Width="374"
                                    Foreground="{ThemeResource OnSurfaceVariantBrush}"
                                    Style="{StaticResource TitleMedium}" />
-                        <utu:AutoLayout Spacing="8"
-                                        Padding="23,0,8,0"
-                                        PrimaryAxisAlignment="End"
-                                        Orientation="Horizontal"
-                                        utu:AutoLayout.CounterAlignment="Center"
-                                        utu:AutoLayout.PrimaryAlignment="Stretch">
-                            <PathIcon Data="{StaticResource Icon_Access_Time}"
+                    </utu:AutoLayout>
+                    <utu:AutoLayout Background="{ThemeResource SecondaryContainerBrush}"
+                                    Spacing="4"
+                                    Padding="40,12"
+                                    CornerRadius="30"
+                                    utu:AutoLayout.IsIndependentLayout="True"
+                                    Margin="20,314,0,0"
+                                    VerticalAlignment="Top"
+                                    HorizontalAlignment="Left"
+                                    Width="350"
+                                    Height="136">
+                        <TextBlock Text="Martha"
+                                   Margin="0,15,0,0"
+                                   utu:AutoLayout.CounterAlignment="Start"
+                                   Foreground="{ThemeResource OnBackgroundBrush}"
+                                   Style="{StaticResource TitleLarge}" />
+                        <utu:AutoLayout Spacing="33"
+                                        Orientation="Horizontal">
+                            <TextBlock TextAlignment="Center"
+                                       Text="Border Collie"
+                                       utu:AutoLayout.CounterAlignment="Center"
+                                       Foreground="{ThemeResource OnSurfaceVariantBrush}"
+                                       Style="{StaticResource TitleMedium}" />
+                            <utu:AutoLayout Spacing="8"
+                                            Padding="23,0,8,0"
+                                            PrimaryAxisAlignment="End"
+                                            Orientation="Horizontal"
+                                            utu:AutoLayout.CounterAlignment="Center"
+                                            utu:AutoLayout.PrimaryAlignment="Stretch">
+                                <PathIcon Data="{StaticResource Icon_Access_Time}"
+                                          utu:AutoLayout.CounterAlignment="Center"
+                                          Foreground="{ThemeResource OnSurfaceVariantBrush}" />
+                                <TextBlock TextAlignment="Center"
+                                           Text="1 year old"
+                                           utu:AutoLayout.CounterAlignment="Center"
+                                           Foreground="{ThemeResource OnSurfaceVariantBrush}"
+                                           Style="{StaticResource TitleMedium}" />
+                            </utu:AutoLayout>
+                        </utu:AutoLayout>
+                        <utu:AutoLayout Spacing="12"
+                                        Orientation="Horizontal">
+                            <PathIcon Data="{StaticResource Icon_Location_Pin}"
                                       utu:AutoLayout.CounterAlignment="Center"
                                       Foreground="{ThemeResource OnSurfaceVariantBrush}" />
-                            <TextBlock TextAlignment="Center"
-                                       Text="1 year old"
+                            <TextBlock TextAlignment="End"
+                                       Text="120 N 4th St, Brooklyn, NY, USA"
                                        utu:AutoLayout.CounterAlignment="Center"
                                        Foreground="{ThemeResource OnSurfaceVariantBrush}"
                                        Style="{StaticResource TitleMedium}" />
                         </utu:AutoLayout>
                     </utu:AutoLayout>
-                    <utu:AutoLayout Spacing="12"
-                                    Orientation="Horizontal">
-                        <PathIcon Data="{StaticResource Icon_Location_Pin}"
-                                  utu:AutoLayout.CounterAlignment="Center"
-                                  Foreground="{ThemeResource OnSurfaceVariantBrush}" />
-                        <TextBlock TextAlignment="End"
-                                   Text="120 N 4th St, Brooklyn, NY, USA"
-                                   utu:AutoLayout.CounterAlignment="Center"
-                                   Foreground="{ThemeResource OnSurfaceVariantBrush}"
-                                   Style="{StaticResource TitleMedium}" />
-                    </utu:AutoLayout>
                 </utu:AutoLayout>
+            </ScrollViewer>
+            <utu:AutoLayout Spacing="39"
+                            Padding="0,10"
+                            PrimaryAxisAlignment="Center"
+                            Orientation="Horizontal">
+                <ToggleButton utu:AutoLayout.CounterAlignment="Center"
+                              BorderBrush="{ThemeResource OnSurfaceVariantBrush}"
+                              BorderThickness="1"
+                              CornerRadius="40"
+                              Style="{StaticResource IconToggleButtonStyle}">
+                    <ToggleButton.Content>
+                        <PathIcon Data="{StaticResource Icon_Favorite_Border}" />
+                    </ToggleButton.Content>
+                    <um:ControlExtensions.AlternateContent>
+                        <PathIcon Data="{StaticResource Icon_Favorite}"
+                                  Foreground="{ThemeResource OnSurfaceMediumBrush}" />
+                    </um:ControlExtensions.AlternateContent>
+                </ToggleButton>
+                <Button Background="{ThemeResource TertiaryBrush}"
+                        Content="Adoption"
+                        utu:AutoLayout.CounterAlignment="Center"
+                        Width="152"
+                        Height="45"
+                        Foreground="{ThemeResource OnSurfaceBrush}"
+                        Style="{StaticResource ElevatedButtonStyle}" />
             </utu:AutoLayout>
-        </ScrollViewer>
-    </utu:AutoLayout>
+        </utu:AutoLayout>
+    </utu:SafeArea> 
+
 </Page>
