chore: add comment for controls

--- a/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Shared/MainPage.xaml
+++ b/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Shared/MainPage.xaml
@@ -32,6 +32,7 @@
                                     PrimaryAxisAlignment="Center"
                                     Orientation="Horizontal"
                                     Height="82">
+                        <!--Pet Images-->
                         <Border utu:AutoLayout.CounterAlignment="Start"
                                 Width="60"
                                 Height="60"
@@ -115,6 +116,7 @@
                 </utu:AutoLayout>
             </utu:AutoLayout>
         </ScrollViewer>
+        <!-- Buttons --> 
         <utu:AutoLayout Spacing="39"
                         Padding="0,10"
                         PrimaryAxisAlignment="Center"
