fix: fixed the binding to background on stackpanel.

--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/MainPage.xaml
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/MainPage.xaml
@@ -19,7 +19,8 @@
                 Padding="1"
                 BorderThickness="1"
                 Margin="0"
-                BorderBrush="{StaticResource Backdrop}">        
+                BorderBrush="{StaticResource Backdrop}"
+                Background="{StaticResource Backdrop}">        
      
         <Grid BorderBrush="{StaticResource SystemAccentColorDark1}"
               BorderThickness="1">
